# geoai_learning

./: .gitignore  README.md  requirements_cpu.txt  requirements_gpu.txt
Tutorial1/: Metrics.ipynb  Metrics_Exercise.ipynb
Tutorial2/: Classification.ipynb  DataExploration.ipynb  DataIntroduction.ipynb
Tutorial3/: CNN.ipynb
Tutorial4/: PLANAURA.md
Tutorial4/Data/: infer_data.csv  sample_config.yaml
Tutorial4/Planaura_edits/: pyproject.toml
Tutorial5/: OilSpil_Classification_Training.ipynb  OilSpil_Segmentation_Training.ipynb  OilSpil_TransferLearning_Analysis.ipynb  OilSpil_TransferLearning_Training.ipynb  OilSpillClassification.py  OilSpillSegmentation.py
Tutorial5/Pretrained/: README.md
Tutorial5/Pretrained/world/: README.md
Tutorial6/: GDL.md
Tutorial7/: Building_Extraction.ipynb  GDL_Training.ipynb  Geo_Inference.ipynb  TrainConfig.yaml  constraints.txt  export_model_to_torchscript.py  geo_inference_script.py  train.py
Tutorial7/GDL_edits/: csv_datamodule.py  csv_dataset.py  pyproject.toml  segmentation_unetplus.py
