[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planaura"
dynamic = ["version"]
description = "Library for feature inference and change detection using Planaura - the Canadian geospatial foundation models"
readme = "README.md"
requires-python = ">=3.10"
maintainers = [
    { name = "Mozhdeh Shahbazi", email = "mozhdeh.shahbazi@nrcan-rncan.gc.ca" },
    { name = "Mikhail Sokolov", email = "mikhail.sokolov@nrcan-rncan.gc.ca" },
]
license = { file = "LICENSE" }

dependencies = [
    "numpy==1.26.4"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

# Auto-read version from AUTOVERSION file
[tool.setuptools.dynamic]
version = { file = "AUTOVERSION" }